<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginTop="@dimen/middle_space"
    app:cardCornerRadius="@dimen/middle_space"
    app:cardElevation="@dimen/tiny_space">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/little_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middle_space"
            android:layout_marginTop="@dimen/small_space"
            android:layout_marginEnd="@dimen/middle_space"
            android:maxLines="2"
            android:text="@string/little_big_title"
            android:textAppearance="@style/TextAppearance.Header"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_image" />

        <TextView
            android:id="@+id/place_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_space"
            android:layout_marginTop="@dimen/middle_space"
            android:text="@string/grand_arena"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_event" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/middle_space"
            android:layout_marginRight="@dimen/middle_space"
            android:text="@string/count_little_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_event" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>